--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@
     <!-- Hard Coded Style sheets -->
         <link rel='stylesheet'  type='text/css' href='css/style.css'>
         <link rel='stylesheet' type='text/css' href='css/foundation.css'>
-        <link rel='stylesheet'  type='text/css' href='css/bootstrap.min.css''>
+        <link rel='stylesheet'  type='text/css' href='css/bootstrap.min.css'>
         
     <!--  End Hard Coded -->
     
