--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head lang='en'>
   <meta charset="UTF-8">
@@ -211,7 +211,7 @@ How that functions is yet to be seen -->
   <!-- Bootstap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/jMyCarousel/jquery-1.2.1.pack.js"></script>
+    <!-- <script type="text/javascript" src="js/jMyCarousel/jquery-1.2.1.pack.js"></script> -->
 	<script type="text/javascript" src="js/jMyCarousel/jMyCarousel.js"></script>
   <!-- End Bootstap JS -->
   
