--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <!--             {% else %} -->
 
 		    <a class="active" href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login&nbsp;&nbsp;&nbsp;</a>
-		    <a class="active" href="/register/"><span class="glyphicon glyphicon-pencil"></span> Register</a>
+		    <a class="active" href="register.html"><span class="glyphicon glyphicon-pencil"></span> Register</a>
 		    
 <!-- 		    flask code -->
 <!--             {% endif %} -->
