--- a/product_view.html
+++ b/product_view.html
@@ -56,7 +56,7 @@
       
 			<h5>
 <!-- 			The cost should change this will be a flask thing -->
-			<a href="/cart/"> <span class="glyphicon glyphicon-shopping-cart"></span> Cart&nbsp;&euro;23.99&nbsp;&nbsp;&nbsp;</a>
+			<a href="cart.html"> <span class="glyphicon glyphicon-shopping-cart"></span> Cart&nbsp;&euro;23.99&nbsp;&nbsp;&nbsp;</a>
 			
 <!--                     The next section of flask code should remove the not need buttons -->
 <!--             flask code -->
@@ -68,7 +68,7 @@
 <!--             {% else %} -->
 
 		    <a class="active" href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login&nbsp;&nbsp;&nbsp;</a>
-		    <a class="active" href="/register/"><span class="glyphicon glyphicon-pencil"></span> Register</a>
+		    <a class="active" href="register.html"><span class="glyphicon glyphicon-pencil"></span> Register</a>
 		    
 <!-- 		    flask code -->
 <!--             {% endif %} -->
