--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
         <li role="presentation" ><a href="index.html">Home</a></li>
         <li role="presentation" class="active"><a href="products.html">Products</a></li>
         <li role="presentation"><a href="#">News</a></li>
-        <li role="presentation"><a href="#">Contact Us</a></li>
+        <li role="presentation"><a href="contact.html">Contact Us</a></li>
         <li role="presentation"><a href="account.html">Your Account</a></li>
         
         
