--- a/account.html
+++ b/account.html
@@ -52,7 +52,7 @@
         <li role="presentation" ><a href="index.html">Home</a></li>
         <li role="presentation" ><a href="products.html">Products</a></li>
         <li role="presentation"><a href="#">News</a></li>
-        <li role="presentation"><a href="#">Contact Us</a></li>
+        <li role="presentation"><a href="contact.html">Contact Us</a></li>
         <li role="presentation" class="active"><a href="account.html">Your Account</a></li>
         
         
