--- a/cart.html
+++ b/cart.html
@@ -50,7 +50,7 @@
         <li role="presentation" class="active"><a href="index.html">Home</a></li>
         <li role="presentation"><a href="products.html">Products</a></li>
         <li role="presentation"><a href="#">News</a></li>
-        <li role="presentation"><a href="#">Contact Us</a></li>
+        <li role="presentation"><a href="contact.html">Contact Us</a></li>
         <li role="presentation"><a href="account.html">Your Account</a></li>
         
         
