forms changed around for user updating

--- a/cart.html
+++ b/cart.html
@@ -47,7 +47,7 @@
       </a>
     </div>
     <ul class="nav nav-pills">
-        <li role="presentation" class="active"><a href="index.html">Home</a></li>
+        <li role="presentation"><a href="index.html">Home</a></li>
         <li role="presentation"><a href="products.html">Products</a></li>
         <li role="presentation"><a href="#">News</a></li>
         <li role="presentation"><a href="contact.html">Contact Us</a></li>
