--- a/register.html
+++ b/register.html
@@ -44,8 +44,8 @@
       </a>
     </div>
     <ul class="nav nav-pills">
-        <li role="presentation" ><a href="index.html">Home</a></li>
-        <li role="presentation" class="active"><a href="products.html">Products</a></li>
+        <li role="presentation"><a href="index.html">Home</a></li>
+        <li role="presentation"><a href="products.html">Products</a></li>
         <li role="presentation"><a href="#">News</a></li>
         <li role="presentation"><a href="contact.html">Contact Us</a></li>
         <li role="presentation"><a href="account.html">Your Account</a></li>
