Made head way on doing the the product view.

--- a/products.html
+++ b/products.html
@@ -103,7 +103,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a> <a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="product_view-v2.html" class="btn btn-primary" role="button">View</a> <a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
@@ -116,7 +116,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="product_view-v2.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
@@ -130,7 +130,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="product_view-v2.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
@@ -143,7 +143,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="product_view-v2.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
@@ -157,7 +157,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="product_view-v2.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
@@ -170,7 +170,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="product_view-v2.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
@@ -184,7 +184,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="product_view-v2.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
@@ -197,7 +197,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="product_view-v2.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
@@ -211,7 +211,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="product_view-v2.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
@@ -224,7 +224,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="product_view-v2.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
@@ -238,7 +238,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="product_view-v2.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
@@ -251,7 +251,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="product_view-v2.html" class="btn btn-primary" role="button">View</a><a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
