--- a/product_view-v2.html
+++ b/product_view-v2.html
@@ -41,7 +41,7 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
 <!--         This image needs to be small like an icon not a brand image -->
-        <img alt="Brand" src="...">
+        <img alt="Brand" src="#">
       </a>
     </div>
     <ul class="nav nav-pills">
@@ -83,33 +83,78 @@
 </nav>
 <!-- End Bootstap Nav Header     -->
     
-    
-<div class="container col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4" style="text-align: center">    
-<form>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" style="text-align: center">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="text-align: center" >
-  </div>
-  <button type="submit" class="btn btn-success">Login</button>
-</form>
+<!--All the information about the products is shown in the following section    -->
+<section class="conainter col-md-10 col-md-offset-1 bottom-spacing">
+
+
+<!--This is the title block for the product view page-->
+<div class="col-md-push-7 col-md-5">
+<div class="col-md-12"><h1>Product Title</h1></div>
+<div class="col-md-10 col-md-push-2"><h3>By <cite>James Fitzpatrick</cite></h3></div>
+<div class="col-md-12"><h4>Cost: &euro;35.00</h4></div>
+<div class="col-md-12"><input type="button" name="Add to Cart" value="Add to Cart" class="btn btn-success"></div>
 </div>
 
 
-<div class="container col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4" style="text-align: center">
-<a class="active" href="/register/"><span class="glyphicon glyphicon-alert"></span> Forgot your pass word!</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a class="active" href="/register/"><span class="glyphicon glyphicon-pencil"></span> Register Now</a>
+
+
+
+<!-- image block is used to show the different images for a product. -->
+<!-- image block -->
+<div class="container col-md-pull-5 col-md-6 border-img">
+	<div class="col-sm-6 col-md-6">
+		<img src="../images/image_holder-250x300.png" alt="" class="img-responsive center-block border-img">
+	</div>
+	<div class="col-sm-6 col-md-6">
+		<div class="col-xs-12 col-sm-12 col-md-12">
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
+		</div>
+		<div class="col-xs-12 col-sm-12 col-md-12">	
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
+		</div>
+		<div class="col-xs-12 col-sm-12 col-md-12">
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
+		</div>
+	</div>
 </div>
+
+
+
+<!--Sample block that could be used in doing the product description-->
+<div class="col-md-10 col-md-offset-1">
+<h1>Description</h1>
+<p>This is the the product description. The big problem here is getting enough text to make the values to look right.</p>
+<p>There may be may ways to which this could be done, but most of this will be up to the person that is uploading the description to being with.</p>
+<ul>
+<li>Using list to add to the page</li>
+<li>Make the font bigger so to take up more room</li>
+<li>Some thing else</li>
+</ul>
+</div>
+
+
+
+
+</section>
+
+
+
+
+
+
+
 
 <!-- This is the footer. A big problem has been found in the css use the footer to find it again -->
 <footer class="col-md-12">
 <hr>
 
-<div class="col-md-2">
+<div class="col-md-2 col-md-offset-1">
 	<p class="no-padding">Company Name</p>
 	<p class="no-padding">Address Line 1</p>
 	<p class="no-padding">Address Line 2</p>
@@ -152,7 +197,6 @@
   
   <!-- Bootstap JS -->
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
   <!-- End Bootstap JS -->
   
   </body>
